-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7, dev
-
None
-
-
20643d17b (dev), ca80d4ff0 (6.6), 1c1f5f5cb (tqtc/lts-6.5)
-
2023wk48FOQtforAndroid
Sometimes after interrupting test execution, androidtestrunner will freeze on subsequent test runs, during the obtainSDKVersion() step of the process.
Specifically after running a manual test in tqtc-android-automotive which requests a permission, requiring manual user input to approve it. In this case the tested code itself opens the permissions view if it doesn't have permissions. Interrupting the test during this will cause the bug.
Running Android Automotive 12.0.0r1, with Qt built from dev, on Ubuntu 20.04.
I stuffed androidtestrunner full of logs in the problematic area, and it seems like the code never returns from pclose() in execCommand() which is called from obtainSDKVersion().
Attempted to use a different emulator to run tests after the bug appears - no luck. I've found nothing besides restarting my computer that has any impact on this. Doesn't even matter if I don't have an emulator running, it gets stuck at the same point ![]()
Steps
- Launch a test in an android emulator
- Interrupt the test during execution
- Possibly the test activity has to be in the background during the interruption, as in the case of this specific test?
- Repeat steps 1-2 until step 1 cannot be executed anymore.
| For Gerrit Dashboard: QTBUG-115298 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 521502,7 | AndroidTestRunner: fix failure to acquire test runner semaphore | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 522406,2 | AndroidTestRunner: fix failure to acquire test runner semaphore | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 522678,4 | AndroidTestRunner: fix failure to acquire test runner semaphore | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |